# MidlePay

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: build-test-install.yml
include/: midlePay.hpp
qml/: MidlePay.qml  MidlePayPop.qml
src/: midlePay.cpp
